# ai-safety-news-agent

./: .dockerignore  .env.example  .gitignore  ASCII_ART.txt  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  TROUBLESHOOTING.md  models.yaml  package-lock.json  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_basic_config.py  test_exa_api_direct.py  test_exa_integration.py
.github/workflows/: ci.yml  security.yml
aisafety_news/: __init__.py  check_sources.py  config.py  logging.py  orchestrator.py  render.py  security.py  summarize.py  ui.py  ui.py.backup  utils.py
aisafety_news/ingest/: __init__.py  sources.py
aisafety_news/ingest/adapters/: __init__.py
aisafety_news/models/: __init__.py  embedding_client.py  llm_client.py
aisafety_news/processing/: __init__.py  dedupe.py  relevance.py  scoring.py  text_utils.py
config/: prompts.yaml
docs/: SECURITY.md
scripts/: security-check.py
templates/: article_summary.j2  daily_newsletter.md  default_newsletter.md  importance_assessment.j2  newsletter.j2  relevance_filter.j2  weekly_newsletter.md
tests/: __init__.py  conftest.py  test_basic_config.py  test_config.py  test_exa_api_direct.py  test_exa_integration.py  test_implementation.py  test_openrouter.py  test_search_api.py
